--- a/templates/form-page.html.twig
+++ b/templates/form-page.html.twig
@@ -1,5 +1,19 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-foo
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col col-lg-8 mt-4">
+                <h3>Add Invoice</h3>
+
+                <ul>
+                    {% for error in errors %}
+                        <li>{{ error.message }}</li>
+                    {% endfor %}
+                </ul>
+
+                {{ form(form, {'attr': {'novalidate': 'novalidate'}}) }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
